ola-parser/src/testdata/syntaxTests/globalFunctions/sha3_no_call.sol
contract C
{
	fn f(bytes memory data)  {
		sha3;
	}
}
// ----
// TypeError 3557: (60-64): "sha3" has been deprecated in favour of "keccak256".
